--- a/module-react/src/App.css
+++ b/module-react/src/App.css
@@ -7,3 +7,9 @@ body {
   max-width: 1300px;
   margin: 0 auto;
 }
+
+.basket-container {
+  max-width: 900px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
