--- a/module-react/src/components/Header/Header.scss
+++ b/module-react/src/components/Header/Header.scss
@@ -12,14 +12,14 @@
     text-transform: uppercase;
     color: #FFFFFF;
   }
-}
 
-.basket {
-  display: flex;
-  align-items: center;
-  column-gap: 20px;
+  &__basket {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+  }
 
-  &__text {
+  &__basket-text {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -30,7 +30,7 @@
     color: #FFFFFF;
   }
 
-  &__img {
+  &__basket-img {
     display: inline-flex;
     align-items: center;
     justify-content: center;
