--- a/module-react/src/components/CardInBasket/CardInBasket.scss
+++ b/module-react/src/components/CardInBasket/CardInBasket.scss
@@ -1,12 +1,11 @@
 .card-in-basket {
   display: flex;
-  // justify-content: space-between;
   align-items: center;
+  column-gap: 20px;
 
   &__img {
     width: 122px;
     height: 122px;
-    margin-right: 100px;
   }
 
   &__name {
@@ -17,12 +16,16 @@
   }
 
   &__price {
-    margin-right: 20px;
+    display: flex;
+    column-gap: 15px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-
     color: #D58C51;
+
+    span:first-child {
+      width: 60px;
+    }
   }
 
   &__button {
