--- a/module-react/src/components/Card/Card.scss
+++ b/module-react/src/components/Card/Card.scss
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  row-gap: 30px;
   padding: 43px 21px 30px 21px;
   width: 310px;
-  height: 552px;
   color: #FFFFFF;
   border: 1px solid #D58C51;
   transition-duration: 200ms;
