--- a/module-react/src/components/Headers/ProductHeader.scss
+++ b/module-react/src/components/Headers/ProductHeader.scss
@@ -1,10 +1,11 @@
 .header {
+  position: relative;
   padding: 48px 0 75px 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 
   &__title {
+    padding-left: 21px;
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 31px;
@@ -14,6 +15,7 @@
   }
 
   &__basket {
+    margin-left: auto;
     display: flex;
     align-items: center;
     column-gap: 20px;
@@ -37,6 +39,6 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #D58C51;
+    background: #D58C51 url('../../../public/images/basket.svg') no-repeat center;
   }
 }
