--- a/module-react/src/App.css
+++ b/module-react/src/App.css
@@ -4,12 +4,6 @@ body {
 }
 
 .container {
-  max-width: 1300px;
-  margin: 0 auto;
-}
-
-.basket-container {
-  max-width: 900px;
-  padding: 0 20px;
+  width: 1300px;
   margin: 0 auto;
 }
