--- a/module-react/src/components/Headers/BasketHeader.scss
+++ b/module-react/src/components/Headers/BasketHeader.scss
@@ -1,12 +1,14 @@
 .basket {
 
   &__header {
+    width: 100%;
     display: flex;
     align-items: center;
   }
 
   &__headling {
     margin-left: 63px;
+    margin-right: auto;
     font-weight: 700;
     font-size: 31px;
     line-height: 38px;
