--- a/module-react/src/components/Headers/ProductHeader.scss
+++ b/module-react/src/components/Headers/ProductHeader.scss
@@ -16,6 +16,7 @@
 
   &__basket {
     margin-left: auto;
+    margin-right: 22px;
     display: flex;
     align-items: center;
     column-gap: 20px;
