--- a/module-react/src/pages/Loginpage/Loginpage.scss
+++ b/module-react/src/pages/Loginpage/Loginpage.scss
@@ -1,27 +1,42 @@
-.wrapper {
-  width: 100vw;
-  height: 100vh;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  background: #C4C4C4 url('../../../public/images/loginBG.jpg') center/cover no-repeat, ;
-
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
+.login {
+  &__wrapper {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.45);
-  }
-}
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: #C4C4C4 url('../../../public/images/loginBG.jpg') center/cover no-repeat, ;
 
-.login {
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.45);
+    }
+  }
+
+  &__link {
+    position: absolute;
+    top: 9px;
+    right: 20px;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 13px;
+    text-align: right;
+    text-decoration-line: underline;
+    color: #D58C51;
+  }
+
   &__form {
+    position: relative;
+    width: 460px;
     position: relative;
     z-index: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     padding: 35px 20px;
     background: #FFFFFF;
@@ -38,7 +53,7 @@
   }
 
   &__input {
-    margin-bottom: 15px;
+    width: 100%;
     padding: 10px 18px;
     font-weight: 400;
     font-size: 16px;
@@ -46,5 +61,56 @@
     color: #161516;
     border: 1px solid #D58C51;
     border-radius: 61px;
+  }
+
+  &__input-error {
+    height: 10px;
+    margin: 1px auto 4px 18px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 8px;
+    line-height: 10px;
+    color: #FF0B0B;
+  }
+
+  &__checkbox {
+    margin-right: auto;
+    margin-bottom: 28px;
+    display: flex;
+    align-items: center;
+
+    &-input {
+      display: none;
+
+
+      &:checked {
+        &+label::before {
+          content: '';
+          display: block;
+          width: 13px;
+          height: 13px;
+          border-radius: 50%;
+          background-color: #D58C51;
+        }
+      }
+    }
+
+    &-label {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 18px;
+      height: 18px;
+      border: 1px solid #D58C51;
+      border-radius: 50%;
+    }
+
+    &-text {
+      margin-left: 9px;
+      font-weight: 300;
+      font-size: 11px;
+      line-height: 13px;
+      color: #301411;
+    }
   }
 }
