--- a/module-react/src/pages/AuthenticationPages/Authentication.scss
+++ b/module-react/src/pages/AuthenticationPages/Authentication.scss
@@ -1,4 +1,5 @@
-.login {
+.login,
+.registration {
   &__wrapper {
     width: 100vw;
     height: 100vh;
@@ -75,7 +76,6 @@
 
   &__checkbox {
     margin-right: auto;
-    margin-bottom: 28px;
     display: flex;
     align-items: center;
 
@@ -112,5 +112,16 @@
       line-height: 13px;
       color: #301411;
     }
+  }
+
+  &__validate-error {
+    margin-top: 8px;
+    margin-bottom: 12px;
+    height: 10px;
+    font-weight: 300;
+    font-size: 8px;
+    line-height: 10px;
+    text-align: center;
+    color: #FF0B0B;
   }
 }
