--- a/module-react/src/components/CardInBasketList/CardInBasketList.scss
+++ b/module-react/src/components/CardInBasketList/CardInBasketList.scss
@@ -1,4 +1,4 @@
-.cardInBasketList {
+.card-in-basket-list {
   width: 900px;
   flex-grow: 1;
   display: flex;
@@ -11,5 +11,19 @@
 
   &::-webkit-scrollbar {
     width: 0;
+  }
+}
+
+.empty-basket {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 15px;
+  align-items: center;
+  font-size: 30px;
+
+  a {
+    color: #D58C51;
   }
 }
