--- a/module-react/src/components/Header/Header.scss
+++ b/module-react/src/components/Header/Header.scss
@@ -1,11 +1,16 @@
 .header {
+  width: 100%;
   position: relative;
   padding: 48px 0 75px 0;
   display: flex;
   align-items: center;
 
+  & .back-arrow-button {
+    margin-right: 63px;
+  }
+
   &__title {
-    padding-left: 21px;
+    margin-right: auto;
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 31px;
@@ -15,7 +20,6 @@
   }
 
   &__basket {
-    margin-left: auto;
     margin-right: 22px;
     display: flex;
     align-items: center;
