--- a/module-react/src/components/Footer/BasketFooter.scss
+++ b/module-react/src/components/Footer/BasketFooter.scss
@@ -12,6 +12,9 @@
 
   &__sum {
     flex-grow: 1;
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
     font-weight: 400;
     font-size: 21px;
     line-height: 26px;
