--- a/module-react/src/components/Buttons/Buttons.scss
+++ b/module-react/src/components/Buttons/Buttons.scss
@@ -12,6 +12,11 @@
     border: 1px solid transparent;
     background-color: #D58C51;
     color: #131313;
+
+    &:disabled {
+      background-color: #525252;
+      cursor: not-allowed;
+    }
   }
 }
 
