--- a/module-react/src/pages/Cardpage/Cardpage.scss
+++ b/module-react/src/pages/Cardpage/Cardpage.scss
@@ -1,6 +1,7 @@
 .description-card {
   color: #FFFFFF;
-  height: calc(100vh - 173px);
+  height: 100vh;
+  background: url('../../../public/images/bg.png') 0 0/cover no-repeat;
 
   &__wrapper {
     max-height: 500px;
